# pre-commit-hooks-dependency-sync

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml  sonar-project.properties
pre_commit_hooks_dependency_sync/: main.py
