[tool.poetry]
name = "pre-commit-hooks-dependency-sync"
version = "1.0.2"
description = "Pre-commit hook to sync your additional dependencies with your project's environment"
authors = ["Will Garside <worgarside@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sync-dependencies = "pre_commit_hooks_dependency_sync.main:main"

[tool.poetry.dependencies]
python = "^3.11"
tomli = "^2.0.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "<3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

# Tool Configs

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
add_imports = ["from __future__ import annotations"]
profile = "black"

[tool.mypy]
exclude = ["_local_sandbox"]
follow_imports = "normal"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true

no_implicit_optional = true
strict_optional = true

strict_equality = true
show_error_codes = true

[tool.codespell]
skip = '*.json,*.csv,*.xml,*.lock'

[tool.pycln]
path = "*"
expand_stars = true
all = true
no_gitignore = false

[tool.ruff]
line-length = 120
select = [
  # https://github.com/astral-sh/ruff#supported-rules
  "A",   # https://beta.ruff.rs/docs/rules/#flake8-builtins-a
  "ARG", # https://beta.ruff.rs/docs/rules/#flake8-unused-arguments-arg
  "B",   # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
  "C4",  # https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
  "COM", # https://beta.ruff.rs/docs/rules/#flake8-commas-com
  "D",   # https://beta.ruff.rs/docs/rules/#pydocstyle-d
  "E",   # https://beta.ruff.rs/docs/rules/#error-e
  "ERA", # https://beta.ruff.rs/docs/rules/#eradicate-era
  "F",   # https://beta.ruff.rs/docs/rules/#pyflakes-f
  "FA",  # https://beta.ruff.rs/docs/rules/#flake8-future-annotations-fa
  "FBT", # https://beta.ruff.rs/docs/rules/#flake8-boolean-trap-fbt
  "G",   # https://beta.ruff.rs/docs/rules/#flake8-logging-format-g
  "I",   # https://beta.ruff.rs/docs/rules/#isort-i
  "ICN", # https://beta.ruff.rs/docs/rules/#flake8-import-conventions-icn
  "N",   # https://beta.ruff.rs/docs/rules/#pep8-naming-n
  "PGH", # https://beta.ruff.rs/docs/rules/#pygrep-hooks-pgh
  "PIE", # https://beta.ruff.rs/docs/rules/#flake8-pie-pie
  "PL",  # https://beta.ruff.rs/docs/rules/#pylint-pl
  "PT",  # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt
  "PTH", # https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
  "Q",   # https://beta.ruff.rs/docs/rules/#flake8-quotes-q
  "RET", # https://beta.ruff.rs/docs/rules/#flake8-return-ret
  "RSE", # https://beta.ruff.rs/docs/rules/#flake8-raise-rse
  "RUF", # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
  "S",   # https://beta.ruff.rs/docs/rules/#flake8-bandit-s
  "SIM", # https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
  "TRY", # https://beta.ruff.rs/docs/rules/#tryceratops-try
  "UP",  # https://beta.ruff.rs/docs/rules/#pyupgrade-up
  "W",   # https://beta.ruff.rs/docs/rules/#warning-w
]
ignore = [
  "COM812", # https://beta.ruff.rs/docs/rules/missing-trailing-comma/
  "D107",   # https://beta.ruff.rs/docs/rules/undocumented-public-init/
  "D202",   # https://beta.ruff.rs/docs/rules/no-blank-line-after-function/
  "S314",   # https://beta.ruff.rs/docs/rules/suspicious-xml-element-tree-usage/
  "TRY003", # https://beta.ruff.rs/docs/rules/raise-vanilla-args/
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pylint]
max-args = 10
